# Api_gateway/pkg/router/admin.go
@@ -8,7 +8,7 @@ import (
 
 const role = "AdminToken"
 
-func AdminRouters(r fiber.Router, handller *handler.UserHandler, payHandller *handler.PaymentHandler) {
+func AdminRouters(r fiber.Router, handller *handler.UserHandler, payHandller *handler.PaymentHandler, gigHandler *handler.GigHandler) {
 	r.Post("/login", handller.AdminLogin)
 	r.Post("/category", middleware.Auth(role), handller.AddCategory)
 	r.Post("/skill", middleware.Auth(role), handller.AddSkill)
@@ -21,4 +21,9 @@ func AdminRouters(r fiber.Router, handller *handler.UserHandler, payHandller *ha
 	r.Post("/create-plan", middleware.Auth(role), payHandller.CreatePlan)
 	r.Get("/plans", middleware.Auth(role), payHandller.GetPlans)
 	r.Delete("/plan/:PlanID", middleware.Auth(role), payHandller.DeletPlan)
+
+	r.Get("/orders/refund", middleware.Auth(Role), gigHandler.GetAllRefundOrders)
+	r.Post("/orders/refund/:OrderID", middleware.Auth(Role), gigHandler.Refund)
+	r.Get("/orders/completed", middleware.Auth(Role), gigHandler.GetAllCompletedOrders)
+	r.Post("/orders/complet/:OrderID", middleware.Auth(Role), gigHandler.Payment)
 }
