# Api_gateway/pkg/router/gig.go
@@ -18,6 +18,12 @@ func GigRouters(r fiber.Router, handller *handler.GigHandler) {
 	r.Get("/offers", middleware.Auth(Role), handller.GetAllOffers)
 	r.Post("/offers/:GigID", middleware.Auth(Role), handller.CreateOfferOrder)
 	r.Get("/requests", middleware.Auth(Role), handller.GetAllOrdersRequest)
-	r.Post("/:order_id/accept",middleware.Auth(Role),handller.AccepteOrder)
-	r.Post("/:order_id/reject",middleware.Auth(Role),handller.RejectOrder)
+	r.Post("/:order_id/accept", middleware.Auth(Role), handller.AccepteOrder)
+	r.Post("/:order_id/reject", middleware.Auth(Role), handller.RejectOrder)
+	r.Get("/orders/freelancer", middleware.Auth(Role), handller.GetAllOrdersFreelancer)
+	r.Get("/orders/:order_id",middleware.Auth(Role),handller.GetOrderByID)
+	r.Put("/orders/:order_id/pending",middleware.Auth(Role),handller.ClientPendingUpdate)
+	r.Put("/orders/:order_id/done",middleware.Auth(Role),handller.ClientDoneUpdate)
+	r.Get("/client/all",middleware.Auth(Role),handller.ClientGetAllGig)
+	r.Get("/client/:gig_id",middleware.Auth(Role),handller.ClientGetGigByID)
 }
